# detectflow-backend

./: .cursorignore  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 30ea38f0b5c5_initial_schema.py  340ed7d7acbb_add_external_repos.py  435a2f412063_merge_release_v1_1_0_heads.py  7c05c641f5a0_add_flink_version_to_pipelines.py  a1b2c3d4e5f6_source_topic_to_source_topics.py  ad3013f0bf85_rename_window_size_seconds_to_window_.py  b8a9c0d1e2f3_add_rule_validation_fields.py  bcd6a58fca88_add_critical_indexes_enabled_pipeline_.py  c64935ba9742_rename_flink_version_to_detectflow_.py  c9696e1b02f7_update_repo_sync_status_and_source_link.py  d1e2f3a4b5c6_add_flink_resource_config.py  d37b8532eba5_merge_health_check_and_rule_validation_.py  e4f5a6b7c8d9_add_health_check_table.py  f018bdf92ae6_add_apply_parser_to_output_events_field_.py
apps/clients/: cmf_api.py  flink_rest.py  github.py  tdm_api.py
apps/core/: audit_hooks.py  auth.py  constants.py  converters.py  database.py  enums.py  error_tracker.py  exceptions.py  logger.py  models.py  pagination.py  schemas.py  settings.py  version.py
apps/managers/: activity.py  auth.py  custom_fields.py  dashboard.py  filter.py  filters.py  flink_config.py  flink_monitor.py  github_sync.py  log_sources.py  mapping.py  parser.py  parser_sync.py  pipeline.py  pipeline_orchestrator.py  pipeline_status.py  repositories.py  rule.py  sigma_validation_service.py  users.py
apps/modules/: utils.py
apps/modules/kafka/: activity.py  activity_consumer.py  base.py  custom_fields.py  filters.py  metrics.py  parsers.py  rules.py  topic_init.py  topics.py
apps/modules/postgre/: __init__.py  audit.py  base.py  config.py  event.py  filter.py  health_check.py  init_admin.py  log_source.py  metrics.py  parser.py  pipeline.py  pipeline_rules.py  repository.py  (+2 more)
apps/providers/: __init__.py  base.py  cmf.py  factory.py  kubernetes.py
apps/routers/: __init__.py  audit.py  auth.py  dashboard.py  filters.py  health_check.py  log_sources.py  mapping.py  parsers.py  pipelines.py  repositories.py  rules.py  settings.py  topics.py  user.py
apps/services/: flink_metrics_poller.py  mapping_watcher.py  scheduler.py
apps/templates/: cmf-application.json.j2  flink-deployment.yaml.j2
scripts/: health_check.py  reset_password.py
tests/: __init__.py  conftest.py  test_enums.py  test_exceptions.py  test_imports.py  test_managers.py  test_pagination.py  test_schemas.py  test_settings.py  test_utils.py
(+1 files in other folders)
